fixed with revisions for spacing

--- a/src/App.css
+++ b/src/App.css
@@ -23,16 +23,18 @@ body {
 }
 
 h1 {
-  font-size: 2.75rem;
-  line-height: 2.5rem;
+  font-size: 38px;
+  margin-bottom: 0;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 30px;
+  margin-bottom: 0;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 25px;
+  margin-bottom: 0;
 }
 
 h1, h2, h3 {
@@ -61,11 +63,7 @@ body a:hover {
 }
 
 section {
-  padding-top: 25px;
-}
-
-section {
-  width: 100%;
+  padding: 25px 20px 0 20px;
   max-width: 1024px;
 }
 
@@ -76,9 +74,5 @@ section {
 
   body {
     position: absolute;
-  }
-
-  section {
-    padding-top: 100px;
   }
 }
