--- a/src/Components/Experience/Jobs/Job.css
+++ b/src/Components/Experience/Jobs/Job.css
@@ -1,5 +1,5 @@
 .job {
-  margin-top: 75px;
+  margin-top: 50px;
   display: flex;
 }
 
